# Cmake_example

./: CMakeLists.txt  README.md  main.cpp
src/: simpleLogger.cpp  simpleLogger.h
test/: CMakeLists.txt  testRectangle.cpp
